<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewRecipeFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleAuthorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:contentDescription="@string/author_name"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/author_name_title"
        />

    <EditText
        android:id="@+id/authorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/author_name"
        android:ellipsize="end"
        android:singleLine="true"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="@id/titleAuthorName"
        tools:text="Автор рецепта"
        tools:ignore="ContentDescription"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:contentDescription="@string/author_name"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/authorName"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/category" />

    <Spinner
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:contentDescription="@string/category_name"
        android:layout_marginTop="16dp"
        android:entries="@array/Category"
        app:layout_constraintTop_toBottomOf="@id/authorName"
        app:layout_constraintStart_toEndOf="@id/titleCategory"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_recipe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/recipe_name"
        app:layout_constraintTop_toBottomOf="@id/category"
        app:layout_constraintStart_toStartOf="parent"/>


    <EditText
        android:id="@+id/recipeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/newStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_step"
        app:layout_constraintTop_toBottomOf="@id/recipeName"
        app:layout_constraintEnd_toEndOf="@id/recipeName"
        app:layout_constraintStart_toStartOf="parent"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/newStep"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/fragment_new_step"/>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_recipe_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_save_24dp" />


</androidx.constraintlayout.widget.ConstraintLayout>