<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleAuthorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:contentDescription="@string/author_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/author_name_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/authorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:contentDescription="@string/author_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleAuthorName"
        android:textSize="20dp"
        android:textColor="@color/black"
        tools:text="Автор рецепта" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:contentDescription="@string/category_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authorName"
        android:text="@string/category" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:contentDescription="@string/category_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleCategory"
        android:textSize="20dp"
        android:textColor="@color/black"
        tools:text="Категория" />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/options"
        style="@style/Widget.AppTheme.Options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_options_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="authorName, options, category" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleTextRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/recipe_text"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/headerBarrier"
        android:text="@string/recipe_name" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/recipe_text"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/titleTextRecipe"
        tools:layout_editor_absoluteX="70dp"
        tools:text="НАЗВАНИЕ РЕЦЕПТА" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="0dp"
        android:layout_height="8dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="textRecipe"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/isFavorite"
        style="@style/Widget.AppTheme.isFavoriteCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:icon="@drawable/ic_star_24dp"
        app:layout_constraintTop_toBottomOf="@id/textRecipe"
        />

</androidx.constraintlayout.widget.ConstraintLayout>